--- a/index.html
+++ b/index.html
@@ -489,10 +489,10 @@
 												(e.g., sex, weight, total length, hind foot length, tail length, ear size).
 											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
 											<li>Set acoustic monitors to understand the influence of sound pollution on small mammal populations.</li>
-											<li>Set mist nets, identified bat species, and collected morphometric data
-												(e.g., sex, weight, total length, wingspan).</li>
 										</ol>
 										<ul>
+											<li>Set mist nets, identified bat species, and collected morphometric data
+												(e.g., sex, weight, total length, wingspan).</li>
 											<li>Established and maintained strong working relationships with partners in academia and local communities.</li>
 										</ul>
 										<ol>
@@ -502,6 +502,19 @@
 									</td>
 										<td style="text-align: center; vertical-align: middle;">August 2022</td>
 								</tr>
+								<tr>
+									<td><b>Field Research Assistant</b><br>
+										Denton, Texas
+										<ul>
+											<li>Assisted with training of a new graduate student in field data collection following project protocols..</li>
+										</ul>
+										<ol>
+											<li>Collected GPS data and set Sherman transects for small mammal trapping.</li>
+											<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
+										</ol>
+									</td>
+									<td style="text-align: center; vertical-align: middle;">July 2022</td>
+								</tr>								
 								<tr>
 									<td>
 										<b>Field Research Assistant</b><br>
@@ -514,7 +527,7 @@
 											<li>Set acoustic monitors and camera traps.</li>
 										</ol>
 										<ul>
-											<li>Established and maintained strong working relationships with partners in private sectors and local communities.</li>
+											<li>Established and maintained a strong working relationship with partners in private sectors and local communities.</li>
 										</ul>
 										<ol>
 											<li>Met with the director of a national government agency with collaborators to discuss permit acquisition
@@ -550,6 +563,20 @@
 								<tr>
 									<td>
 										<b>Field Technician</b><br>
+										Lewisville, Texas<br>
+										<ul>
+											<li>Volunteered 30 hours to actively assist a colleague with field data collection.</li>
+										</ul>
+										<ol>
+											<li>Collected GPS data, telemetry, triangulation, and identified quail mortalities.</li>
+											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
+										</ol>
+									</td>
+									<td style="text-align: center; vertical-align: middle;">September 2021</td>
+								</tr>
+								<tr>
+									<td>
+										<b>Field Technician</b><br>
 										Reading, Kansas<br>
 										<ul>
 											<li>Surveyed a Greater Prairie-chicken lek to assess courtship displays and breeding behaviors.</li>
@@ -567,34 +594,7 @@
 										</ul>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">April 2021</td>
-								</tr>
-								<tr>
-									<td><b>Field Research Assistant</b><br>
-										Denton, Texas
-										<ul>
-											<li>Assisted with training of a new graduate student in field data collection following project protocols..</li>
-										</ul>
-										<ol>
-											<li>Collected GPS data and set Sherman transects for small mammal trapping.</li>
-											<li>Measured tree DBH, height, visual obstruction, ground cover; identified tree species.</li>
-										</ol>
-									</td>
-									<td style="text-align: center; vertical-align: middle;">July 2022</td>
-								</tr>
-								<tr>
-									<td>
-										<b>Field Technician</b><br>
-										Lewisville, Texas<br>
-										<ul>
-											<li>Volunteered 30 hours to actively assist a colleague with field data collection.</li>
-										</ul>
-										<ol>
-											<li>Collected GPS data, telemetry, triangulation, and identified quail mortalities.</li>
-											<li>Measured tree DBH, height, visual obstruction, and ground cover; identified tree species.</li>
-										</ol>
-									</td>
-									<td style="text-align: center; vertical-align: middle;">September 2021</td>
-								</tr>
+								</tr>								
 								<tr>
 									<td>
 										<b>Undergraduate Faculty-Sponsored Projects</b> (MMC) <br>
