--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 								</tr>
 								<tr>
 									<td><b>Field Research Assistant</b><br>
-										Denton, Texas
+										Lewisville, Texas
 										<ul>
 											<li>Assisted with training of a new graduate student in field data collection following project protocols..</li>
 										</ul>
