--- a/index.html
+++ b/index.html
@@ -597,10 +597,10 @@
 								</tr>								
 								<tr>
 									<td>
-										<b>Undergraduate Faculty-Sponsored Projects</b> (MMC) <br>
+										<b>Undergraduate Faculty-Sponsored Projects</b><br>
 										<i>Mice DNA Barcoding</i> <font color="#afbcc0">•</font> Mount Pleasant, MI<br>
 										<ul>
-											<li>Designed and presented a poster of research methods and result sat the MMC 3rd Annual Student Showcase.</li>
+											<li>Designed and presented a poster of research methods and results at the MMC 3rd Annual Student Showcase.</li>
 										</ul>
 										<ol>
 											<li>Received Student Showcase Award.</li>
