--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 											<li>Quantified landscape connectivity using resistance raster connectivity models in ArcGIS and <i>Circuitscape</i>.</li>
 										</ul>
 										<ol>
-											<li>◦	Extensively reviewed literature to develop expert literature-based models for small mammals.</li>
+											<li>Extensively reviewed literature to develop expert literature-based models for small mammals.</li>
 											<li>Measured gene flow across natural wildlife corridors to assess corridor efficacy.</li>
 										</ol>
 										<ul>
