--- a/index.html
+++ b/index.html
@@ -246,31 +246,29 @@
 										</ul>
 										<ol>
 											<li>Actively trained new TAs weekly to aid in their pedagogy development and success.</li>
-											<li>Reliably prepared weekly presentations, learning materials, and organized the online course for all TAs to use.</li>
+											<li>Reliably prepared weekly presentations, exams, learning materials, and organized the online course for all TAs to use.</li>
 										</ol>
 										<ul>
-											<li>Thoroughly revised 10 environmental sampling exercises and weekly presentation materials to achieve course efficacy.</li>
+											<li>Revised 10 modules, lab exercises, and weekly presentation materials to facilitate lab productivity.</li>
 										</ul>
 										<ol>
-											<li>Successfully published the 2nd edition lab manual,
+											<li>Published the 2nd edition lab manual,
 												<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
 													<i>Field & Laboratory Methods for Environmental Science for Non-majors</i></a>.</li>
 										</ol>
 										<ul>
-											<li>Supervised environmental sampling exercises, synthesized data, and led discussions to interpret results in a 
-												lab/field setting for 11-course sections with ~24 students per section.</li>
+											<li>Demonstrated and supervised field/lab experiments for 11-course sections with ~24 students each.</li>
+											<li>Synthesized and analyzed class data to individualize ~110 discussions/conclusions based on experimental results. </li>
 										</ul>
 										<ol>
-											<li>Measured dissolved oxygen, contaminant levels, and pH to assess and compare municipal and pond water quality.</li>
-											<li>Planted native plants and seeds on 4 acres of a restored native prairie to promote pollinator habitats,
-												outdoor recreation, and land restoration.</li>
-											<li>Tested nutrient levels, pH, and soil structure/texture to analyze and compare soil health between different land uses.</li>
+											<li>Tested water quality of pond and municipal samples to compare dissolved oxygen, contaminant levels, pH, and turbidity.</li>
+											<li>Measured nutrient levels, pH, and soil structure/texture to compare soil health between different land uses.</li>
+											<li>Planted native plants and seeds on 4 acres of a restored native prairie to promote pollinator habitats, outdoor recreation, and land restoration. </li>
+											<li>Assessed the influence fertilizers and temperature have on dissolved oxygen content in freshwater ecosystems.</li>
 											<li>Collected and identified benthic macroinvertebrates and biomonitors to assess aquatic habitat quality in local streams.</li>
-											<li>Assessed the influence fertilizers and temperature has on dissolved oxygen content in freshwater systems.</li>
-											<li>Analyzed changes in the global climate over time (e.g., carbon dioxide levels, sea levels, global temperatures).</li>
+											<li>Analyzed changes in the global climate over time (e.g., carbon dioxide levels, sea levels, global temperature).</li>
 										</ol>
 										<ul>
-											<li>Revised weekly quizzes and exams; promptly updated grades and held weekly office hours.</li>
 											<li>Maintained responsibility for weekly lab exercise prep following lab protocol for all TA sections (2021).</li>
 										</ul>
 									</td>
