--- a/index.html
+++ b/index.html
@@ -277,23 +277,22 @@
 								<td>
 									<b>Research Assistant</b><br>
 									<i><a target="_blank" rel="noopener noreferrer" href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i>
-									<font color="#afbcc0"> •</font> Denton, Texas
-
-									<br>
+									<font color="#afbcc0"> •</font> Denton, Texas<br>
 									<ul>
 										<li>Collected, created, manipulated, analyzed, and managed >2 TB of spatial data to support international research collaborations.</li>
+										<li>Completed a workflow for project collaborators to implement spatial processing across 11+ international landscapes.</li>
 										<li>Provided spatial modeling support for the project in conjunction with field data and genetic analysis.</li>
-										<li>Presented research for internal and external partners; implemented feedback to meet multi-user objectives.</li>
+										<li>Presented research for internal and external partners to implement feedback and meet multi-user objectives.</li>
 									</ul>
 									<ol>
 										<li>Strengthened communication of technical and complex geospatial information to technical and non-technical audiences. </li>
 									</ol>
 									<ul>
-										<li>Completed a workflow for project collaborators to implement spatial processing across 11+ landscapes, internationally.</li>
+
 										<li>Worked closely with the project manager, field technicians, and partners in private sectors and academia.</li>
 									</ul>
 									<ol>
-										<li>Developed and cultivated a strong rapport with collaborators.</li>
+										<li>Developed and cultivated a strong rapport with collaborators in 5 countries.</li>
 										<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
 										<li>Implemented country-specific policies with data collection to support long-term collaborative conservation goals.</li>
 									</ol>
@@ -304,7 +303,7 @@
 										<li>Scouted landscapes to identify areas suitable for field data collection and spatial modeling following project protocols.</li>
 									</ol>
 									<ul>
-										<li>Actively trained colleagues in best practices for utilizing ArcGIS and R, troubleshooting, and data management to meet their project objectives. </li>
+										<li>Trained colleagues in best practices for utilizing ArcGIS and R, troubleshooting, and data management to meet their project objectives.</li>
 										<li>Maintained responsibility for administrating geospatial lab computers to facilitate program use.</li>
 									</ul>
 								</td>
