--- a/index.html
+++ b/index.html
@@ -316,8 +316,7 @@
 											<li>Assessed current GIS technologies to apply the best and develop new spatial processes to meet project objectives.</li>
 										</ul>
 										<ol>
-											<li>Standardized spatial data collection and analysis to facilitate and implement genetic analysis with
-												spatial modeling across 11+ landscapes, internationally.</li>
+											<li>Standardized spatial data collection and analysis to facilitate geospatial processing across 11+ international landscapes.</li>
 										</ol>
 										</ul>
 										<ol>
@@ -354,26 +353,24 @@
 										<i>Conservation, Connectivity, and Coexistence:
 											Understanding Corridor Efficacy in Fragmented Landscapes</i><br>
 										<ul>
-											<li>Consistently executed advanced spatial and statistical analysis for three landscapes to produce
-												cartographic and data-driven products that support land management decision-making.</li>
+											<li>Consistently executed spatial and statistical analysis for 3 landscapes to produce cartographic and 
+												data-driven products for technical reports that improve conservation planning and support land management.</li>
+											
+										Applied best and personally developed spatial approaches and tools to facilitate spatial processing and data analysis.
+										Thoroughly documented methodological approaches and troubleshooting.
+
 										</ul>
 										<ol>
-											<li>Developed Python and R scripts to facilitate spatial and statistical analysis from multiple data sources.</li>
-											<li>Precisely updated, manipulated, and ensured accuracy of spatial data attributes to meet project objectives using ArcGIS.</li>
-											<li>Analyzed imagery, classified land covers, corrected errors, and assessed accuracies to produce overall accuracies ≥ 92% using ArcGIS.</li>
+											<li>Developed R and Python scripts to facilitate spatial and statistical analysis from multiple data sources.</li>
+											<li>Precisely updated, manipulated, managed, and ensured accuracy of spatial data attributes to meet project objectives.</li>
+											<li>Analyzed imagery, classified land covers, and corrected errors to produce overall accuracies ≥ 92%.</li>
 										</ol>
 										<ul>
 											<li>Quantified landscape connectivity using resistance raster connectivity models in ArcGIS and <i>Circuitscape</i>.</li>
 										</ul>
 										<ol>
 											<li>Extensively reviewed literature to develop expert literature-based models for small mammals.</li>
-											<li>Measured gene flow across natural wildlife corridors to assess corridor efficacy.</li>
-										</ol>
-										<ul>
-											<li>Scouted landscapes to identify forest habitat suitable for small mammal trapping, forest inventories, and spatial modeling.</li>
-										</ul>
-										<ol>
-											<li>Implemented on-the-ground knowledge with modeling to conduct spatial analysis with higher accuracy.</li>
+											<li>Measured gene flow across natural wildlife corridors to assess corridor efficacy using ArcGIS, R, and GenAlEx.</li>
 										</ol>
 										<ul>
 											<li>Applied best and personally developed spatial approaches and tools to facilitate
@@ -381,6 +378,12 @@
 										</ul>
 										<ol>
 											<li>Thoroughly documented methodological approaches and troubleshooting.</li>
+										</ol>										
+										<ul>
+											<li>Scouted landscapes to identify forest habitat suitable for small mammal trapping, forest inventories, and spatial modeling.</li>
+										</ul>
+										<ol>
+											<li>Implemented on-the-ground knowledge with modeling to conduct spatial analysis with higher accuracy.</li>
 										</ol>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">August 2020<br> - <br>December 2022</td>
@@ -389,20 +392,20 @@
 									<b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
 									<i>Tiger (Panthera tigris) Endangerment: Positive Responses to Tiger Conservation Efforts</i>
 									<ul>
-										<li>Produced cartographic and data-driven products that support land and wildlife management decision-making.</li>
+										<li>Produced cartographic and data-driven products that support land and wildlife management decision-making using ArcGIS and R.</li>
 									</ul>
 									<ol>
-										<li>Designed a map using ArcGIS; debugged R scripts for statistical analysis; promptly shared with colleagues.</li>
+										<li>Debugged R scripts for statistical analysis; promptly shared with colleagues.</li>
 									</ol>
 									<ul>
 										<li>Thoroughly reviewed pertinent literature to develop research question(s) and collect subspecies demographic data for statistical analysis.</li>
 									</ul>
 									<ol>
-										<li>Assessed the influence varying levels of human disturbance have on the viability of three geographically distinct tiger populations.</li>
+										<li>Assessed the influence varying levels of human disturbance have on the viability of 3 geographically distinct populations.</li>
 										<li>Produced a publishable unit (in prep) from an assignment in a graduate Conservation Biology course.</li>
 									</ol>
 									<ul>
-										<li>Actively managed project database in a collaborative workspace environment.</li>
+										<li>Organized and managed project database in a collaborative workspace environment.</li>
 									</ul>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
@@ -411,17 +414,17 @@
 									<td>
 										<i>Greater Sage-Grouse are an Umbrella Species for Shrub-Steppe Bird Communities at a Range-Wide Scale</i><br>
 										<ul>
-											<li>Optimized >2,400 spatial data points for spatial and statistical analysis; mined Breeding Bird Survey data via Pythonic tool.</li>
-											<li>Produced cartographic and data-driven products that support land and wildlife management decision-making.</li>
+											<li>Optimized >2,400 spatial data points for spatial and statistical analysis using Breeding Bird Survey data.</li>
+											<li>Produced cartographic and data-driven products that support land and wildlife management using ArcGIS and R.</li>
 										</ul>
 										<ol>
-											<li>Designed a map using ArcGIS; developed R scripts for statistical analysis and uniform data visualization.</li>
+											<li>Developed R scripts for statistical analysis and uniform data visualization.</li>
 											<li>Featured as the first study conducted by
 												<a target="_blank" rel="noopener noreferrer" href="https://savebirds.app/#">
 													<i>SaveBirds</i></a>.</li>
 										</ol>
 										<ul>
-											<li>Actively managed project database in a collaborative workspace environment.</li>
+											<li>Organized and managed project database in a collaborative workspace environment.</li>
 											<li>Investigated the influence managed greater sage-grouse (GSG) areas have on metrics of avian diversity over time.</li>
 										</ul>
 										<ol>
