--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 											<li>Quantified landscape connectivity using resistance raster connectivity models in ArcGIS and <i>Circuitscape</i>.</li>
 										</ul>
 										<ol>
-											<li>Extensively reviewed literature to develop expert literature-based models for small mammals.</li>
+											<li>Extensively reviewed literature to develop expert literature-based models for 4 small mammals.</li>
 											<li>Measured gene flow across natural wildlife corridors to assess corridor efficacy using ArcGIS, R, and GenAlEx.</li>
 										</ol>
 										<ul>
@@ -443,14 +443,13 @@
 												landscape-scale spatial analysis using ArcGIS.</li>
 										</ul>
 										<ol>
-											<li>Consistently executed spatial analysis across nine landscapes using ModelBuilder.</li>
-											<li>Produced cartographic and data-driven products using open-sourced spatial data.</li>
+											<li>Consistently executed spatial analysis across 9 landscapes using ModelBuilder.</li>
+											<li>Acquired, manipulated, and analyzed open-sourced spatial data to produce cartographic and data-driven products.</li>
 											<li>Organized and managed spatial and non-spatial data.</li>
 										</ol>
 										<ul>
-											<li>Independently conducted spatial and statistical analyses to assess the influence human land uses
-												has on nine endangered, vulnerable, and near-threatened cat populations.</li>
-											<li>Extensively reviewed pertinent literature to collect species-specific data for research objectives.</li>
+											<li>Conducted spatial and statistical analyis to assess the influence human land use and land change has on 9 endangered, vulnerable, and near-threatened cat populations.</li>
+											<li>Extensively reviewed literature to develop expert literature-based models using spatially explicit environmental data for 9 big cats.</li>
 										</ul>
 										<ol>
 											<li>Developed expert literature-based models to develop resistance rasters for connectivity models.</li>
