--- a/index.html
+++ b/index.html
@@ -629,6 +629,28 @@
 						</div>
 					</section>
 
+					<!-- PUBLICATIONS -->
+					<section>
+						<h6>Publications</h6>
+						<div class="table-wrapper">
+							<table>
+								<col style="width:100%">
+								<thead>
+								<tr>
+								</tr>
+								</thead>
+								<tbody>
+								<td>
+									<p class="hangingindent">Baxter-Slye J with Contributions from <font color="#7e9094"><b>Long AM</b></font>, Kalta B (2022).
+										<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
+											Field & laboratory methods for environmental science for non-majors (2nd edition)</a>.
+										Department of Biological Sciences at University of North Texas. Kendall Hunt Publishing.</p>
+								</td>
+								</tfoot>
+							</table>
+						</div>
+					</section>
+
 					<!-- PRESENTATIONS -->
 					<section>
 						<h6>Presentations</h6>
