--- a/index.html
+++ b/index.html
@@ -673,6 +673,15 @@
 								</tr>
 								<tr>
 									<td>
+										<b>34th Prairie Grouse Technical Council Biennial Meeting</b><font color="#afbcc0"> • </font>Lewistown, Montana<br>
+										<p class="hangingindent">Hendrickson B, Rezaee M, <font color="#7e9094"><b>Long AM</b></font>, Green R, Gregory AJ.
+											<i>Greater Sage-Grouse are an Umbrella Species for Shrub Steppe Bird Communities at a Range-Wide scale.</i></p>
+										<p class="indent">*Co-author</p>
+									</td>
+									<td style="text-align: center; vertical-align: middle;">October 2022</td>
+								</tr>									
+								<tr>
+									<td>
 										<b>Advanced Environmental Research Institute Welcome Back Event</b><font color="#afbcc0"> • </font>Denton, Texas<br>
 										<p class="hangingindent"><font color="#7e9094"><b>Long AM</b></font>, Spence ES, Travis J, Beier P, Gregory AJ, Bullock J.
 											<i>Do wildlife corridors conserve wildlife?</p>
