--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<li><a href="https://twitter.com/_AmandaMLong" class="icon brands style1 fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://www.linkedin.com/in/amanda--long/" class="icon brands style1 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						<li><a href="mailto:along3460@gmail.com" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
-						<li><a href="https://amandamlong.github.io/" class="icon brands style1 fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://github.com/AmandaMLong" class="icon brands style1 fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 					<center><p>This CV is interactive - Check out the links as well as my portfolio for more details</p></center><br>
 			</section>
