--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<dd>
 							<p>ESRI ArcGIS, Spatial Analysis, Image Analysis, Remote Sensing, Spatial and Non-spatial
 								Data Management, Data Manipulation and Analysis, Data Visualization, Digitizing,
-								Python, SQL, R, HTML, CSS, JavaScript, SCSS, Microsoft Office Suite, Troubleshooting</p>
+								Python, SQL, R, HTML, CSS, JavaScript, SCSS, Troubleshooting, Microsoft Office Suite</p>
 						</dd>
 						<dt>Field Skills</dt>
 						<dd>
