--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 										<font color="#afbcc0"> •</font> Denton, Texas<br>
 										<ul>
 											<li>Achieved proficiency in effectively communicating technical content to non-technical audiences.</li>
-											<li>Promoted to lead TA in January 2022; assessed and implemented recommendations to improve course efficiency</li>
+											<li>Promoted to lead TA in January 2022; assessed and implemented recommendations to improve course efficiency.</li>
 										</ul>
 										<ol>
 											<li>Actively trained new TAs weekly to aid in their pedagogy development and success.</li>
@@ -258,7 +258,7 @@
 										</ol>
 										<ul>
 											<li>Demonstrated and supervised field/lab experiments for 11-course sections with ~24 students each.</li>
-											<li>Synthesized and analyzed class data to individualize ~110 discussions/conclusions based on experimental results. </li>
+											<li>Interpreted and synthesized experimental results to lead ~110 individualized class discussions.</li>
 										</ul>
 										<ol>
 											<li>Tested water quality of pond and municipal samples to compare dissolved oxygen, contaminant levels, pH, and turbidity.</li>
