--- a/index.html
+++ b/index.html
@@ -279,32 +279,27 @@
 									<i><a target="_blank" rel="noopener noreferrer" href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i>
 									<font color="#afbcc0"> •</font> Denton, Texas<br>
 									<ul>
-										<li>Collected, created, manipulated, analyzed, and managed >2 TB of spatial data to support international research collaborations.</li>
-										<li>Completed a workflow for project collaborators to implement spatial processing across 11+ international landscapes.</li>
-										<li>Provided spatial modeling support for the project in conjunction with field data and genetic analysis.</li>
-										<li>Presented research for internal and external partners to implement feedback and meet multi-user objectives.</li>
+										<li>Provided technical, scientific, and liaison support for a long-term international collaborative project.</li>
 									</ul>
 									<ol>
-										<li>Strengthened communication of technical and complex geospatial information to technical and non-technical audiences. </li>
-									</ol>
-									<ul>
-
-										<li>Worked closely with the project manager, field technicians, and partners in private sectors and academia.</li>
-									</ul>
-									<ol>
+										<li>Collected, processed, analyzed, and managed >2 TB of geospatial data using ArcGIS.</li>
+										<li>Completed a workflow for project team to implement spatial processing across 11+ international landscapes.</li>
+										<li>Scouted landscapes on-the-ground to identify areas suitable for field data collection and spatial modeling following project protocols.</li>
+										<li>Implemented field data collection and assisted with training collaborators in field protocols/transporting field and lab equipment.</li>
 										<li>Developed and cultivated a strong rapport with collaborators in 5 countries.</li>
 										<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
 										<li>Implemented country-specific policies with data collection to support long-term collaborative conservation goals.</li>
 									</ol>
 									<ul>
-										<li>Assisted with the international transportation of field and lab equipment, implementing field sampling, and training collaborators in field protocols.</li>
+
+										<li>Prepared presentations for internal and external partners to implement feedback and meet multi-user objectives.</li>
 									</ul>
 									<ol>
-										<li>Scouted landscapes to identify areas suitable for field data collection and spatial modeling following project protocols.</li>
+										<li>Strengthened communication of technical and complex geospatial information to technical and non-technical audiences. </li>
 									</ol>
 									<ul>
 										<li>Trained colleagues in best practices for utilizing ArcGIS and R, troubleshooting, and data management to meet their project objectives.</li>
-										<li>Maintained responsibility for administrating geospatial lab computers to facilitate program use.</li>
+										<li>Administered geospatial lab computer systems/programs to facilitate use.</li>
 									</ul>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">May 2022<br> - <br>August 2022</td>
@@ -336,7 +331,7 @@
 						</div>
 					</section>
 
-					<!-- RESEARCH EXPERIENCE -->
+					<!-- APPLIED GEOSPATIAL EXPERIENCE -->
 					<section>
 						<h6>Applied Geospatial Experience</h6>
 						<div class="table-wrapper">
