--- a/index.html
+++ b/index.html
@@ -306,26 +306,27 @@
 								<tr>
 									<td>
 										<ul>
-											<li>Optimized >4,500 GPS points to integrate with landscape-scale spatial analysis.</li>
-											<li>Analyzed satellite imagery and digitized forest and rangeland boundaries.</li>
-											<li>Assessed current GIS technologies to apply the best and develop new spatial processes to meet project objectives.</li>
+											<li>Provided scientific and technical support to streamline and implement spatial processing
+												across 11+ landscapes using ArcGIS.</li>
 										</ul>
 										<ol>
-											<li>Standardized spatial data collection and analysis to facilitate geospatial processing across 11+ international landscapes.</li>
+											<li>Standardized spatial data collection and analysis to meet project objectives and facilitate spatial processing across 11+ international landscapes.</li>
+											<li>Performed quality control and optimized >4,500 GPS points to integrate with spatial analysis.</li>
+											<li>Analyzed satellite imagery and digitized forest and rangeland boundaries.</li>
 										</ol>
+										<ul>
+											<li>Assessed current GIS technologies to apply the best and develop new spatial processes to meet project objectives.</li>
 										</ul>
 										<ol>
 											<li>Thoroughly documented methodological approaches and troubleshooting. </li>
 										</ol>
 										<ul>
-										<li>Provided scientific and technical spatial support for the project in conjunction with field data and genetic analysis.</li>
-											<li>Gathered, created, analyzed, organized, and presented geospatial data for the project team;
-												implemented feedback to meet multi-user objectives.</li>
+											<li>Organized and presented geospatial data to update the project team and implement
+												feedback to meet multi-user objectives.</li>
 										</ul>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">July 2021<br> - <br>August 2021</td>
 								</tr>
-
 								</tfoot>
 							</table>
 						</div>
