--- a/index.html
+++ b/index.html
@@ -284,8 +284,10 @@
 									<ol>
 										<li>Collected, processed, analyzed, and managed >2 TB of geospatial data using ArcGIS.</li>
 										<li>Completed a workflow for project team to implement spatial processing across 11+ international landscapes.</li>
-										<li>Scouted landscapes on-the-ground to identify areas suitable for field data collection and spatial modeling following project protocols.</li>
-										<li>Implemented field data collection and assisted with training collaborators in field protocols/transporting field and lab equipment.</li>
+										<li>Identified forest areas suitable for field data collection and spatial modeling following project protocols.</li>
+										<li>Performed field data collection and assisted with training collaborators in field protocols -
+											GPS, small mammal trapping, live handling, genetic/morphometric sampling, forest inventory,
+											acoustic monitoring, camera trapping.</li>
 										<li>Developed and cultivated a strong rapport with collaborators in 5 countries.</li>
 										<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
 										<li>Implemented country-specific policies with data collection to support long-term collaborative conservation goals.</li>
