--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 										<li>Provided technical, scientific, and liaison support for a long-term international collaborative project.</li>
 									</ul>
 									<ol>
-										<li>Collected, processed, analyzed, and managed >2 TB of geospatial data using ArcGIS.</li>
+										<li>Processed, analyzed, and managed >2 TB of geospatial data using ArcGIS.</li>
 										<li>Completed a workflow for project team to implement spatial processing across 11+ international landscapes.</li>
 										<li>Identified forest areas suitable for field data collection and spatial modeling following project protocols.</li>
 										<li>Performed field data collection and assisted with training collaborators in field protocols -
@@ -351,13 +351,26 @@
 										<i>Conservation, Connectivity, and Coexistence:
 											Understanding Corridor Efficacy in Fragmented Landscapes</i><br>
 										<ul>
-											<li>Consistently executed spatial and statistical analysis for 3 landscapes to produce cartographic and 
-												data-driven products for technical reports that improve conservation planning and support land management.</li>
+										<li>Provided geospatial processing, analysis, and data management support
+											for a long-term international collaborative project,
+											<i><a target="_blank" rel="noopener noreferrer" href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i>,
+											in conjunction with field data collection and genetic analysis.</li>
+											<li>Consistently executed spatial and statistical analysis for 3 landscapes to produce cartographic and
+												data-driven products that inform conservation planning and support land management.</li>
 										</ul>
 										<ol>
-											<li>Developed R and Python scripts to facilitate spatial and statistical analysis from multiple data sources.</li>
-											<li>Precisely updated, manipulated, managed, and ensured accuracy of spatial data attributes to meet project objectives.</li>
-											<li>Analyzed imagery, classified land covers, and corrected errors to produce overall accuracies ≥ 92%.</li>
+											<li>Developed R and Python scripts to facilitate spatial and statistical analysis from multiple data sources
+												in conjunction with ArcGIS.</li>
+											<li>Analyzed, interpreted, and synthesized geospatial data for publication and technical reports.</li>
+											<li>Updated, manipulated, managed, and ensured accuracy of spatial data attributes to meet project objectives.</li>
+										</ol>
+										<ul>
+											<li>Developed spatially explicit models to quantify landscape connectivity using ArcGIS and <i>Circuitscape</i>.</li>
+										</ul>
+										<ol>
+											<li>Analyzed satellite imagery, classified land covers, and corrected errors to produce raster layers with overall >92% accuracy.</li>
+											<li>Measured gene flow across natural wildlife corridors to assess corridor efficacy using ArcGIS, R, and GenAlEx.</li>
+											<li>Extensively reviewed literature to develop expert literature-based raster models for small mammals.</li>
 										</ol>
 										<ul>
 											<li>Applied best and personally developed spatial approaches and tools to facilitate
@@ -365,19 +378,6 @@
 										</ul>
 										<ol>
 											<li>Thoroughly documented methodological approaches and troubleshooting.</li>
-										</ol>											
-										<ul>
-											<li>Quantified landscape connectivity using resistance raster connectivity models in ArcGIS and <i>Circuitscape</i>.</li>
-										</ul>
-										<ol>
-											<li>Extensively reviewed literature to develop expert literature-based models for 4 small mammals.</li>
-											<li>Measured gene flow across natural wildlife corridors to assess corridor efficacy using ArcGIS, R, and GenAlEx.</li>
-										</ol>
-									
-										<ul>
-											<li>Scouted landscapes to identify forest habitat suitable for small mammal trapping, forest inventories, and spatial modeling.</li>
-										</ul>
-										<ol>
 											<li>Implemented on-the-ground knowledge with modeling to conduct spatial analysis with higher accuracy.</li>
 										</ol>
 									</td>
