--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 											<li>Developed R and Python scripts to facilitate spatial and statistical analysis from multiple data sources
 												in conjunction with ArcGIS.</li>
 											<li>Analyzed, interpreted, and synthesized geospatial data for publication and technical reports.</li>
-											<li>Updated, manipulated, managed, and ensured accuracy of spatial data attributes to meet project objectives.</li>
+											<li>Updated, manipulated, managed, and ensured accuracy of spatial and non-spatial data to meet project objectives.</li>
 										</ol>
 										<ul>
 											<li>Developed spatially explicit models to quantify landscape connectivity using ArcGIS and <i>Circuitscape</i>.</li>
@@ -387,17 +387,17 @@
 									<b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
 									<i>Tiger (Panthera tigris) Endangerment: Positive Responses to Tiger Conservation Efforts</i>
 									<ul>
-										<li>Produced cartographic and data-driven products that support land and wildlife management decision-making using ArcGIS and R.</li>
+										<li>Produced cartographic and data-driven products following journal guidelines that support land and wildlife management using ArcGIS and R.</li>
 									</ul>
 									<ol>
 										<li>Debugged R scripts for statistical analysis; promptly shared with colleagues.</li>
+										<li>Processed, analyzed, interpreted, and synthesized spatial data for publication.</li>
 									</ol>
 									<ul>
 										<li>Thoroughly reviewed pertinent literature to develop research question(s) and collect subspecies demographic data for statistical analysis.</li>
 									</ul>
 									<ol>
-										<li>Assessed the influence varying levels of human disturbance have on the viability of 3 geographically distinct populations.</li>
-										<li>Produced a publishable unit (in prep) from an assignment in a graduate Conservation Biology course.</li>
+										<li>Assessed the influence varying levels of human disturbance has on the viability of 3 geographically distinct populations.</li>
 									</ol>
 									<ul>
 										<li>Organized and managed project database in a collaborative workspace environment.</li>
@@ -410,10 +410,12 @@
 										<i>Greater Sage-Grouse are an Umbrella Species for Shrub-Steppe Bird Communities at a Range-Wide Scale</i><br>
 										<ul>
 											<li>Optimized >2,400 spatial data points for spatial and statistical analysis using Breeding Bird Survey data.</li>
-											<li>Produced cartographic and data-driven products that support land and wildlife management using ArcGIS and R.</li>
+											<li>Produced cartographic and data-driven products following journal guidelines that support land and wildlife management using ArcGIS and R.</li>
 										</ul>
 										<ol>
 											<li>Developed R scripts for statistical analysis and uniform data visualization.</li>
+											<li>Processed, analyzed, interpreted, and synthesized spatial data for publication.</li>
+
 											<li>Featured as the first study conducted by
 												<a target="_blank" rel="noopener noreferrer" href="https://savebirds.app/#">
 													<i>SaveBirds</i></a>.</li>
