--- a/index.html
+++ b/index.html
@@ -383,30 +383,9 @@
 									</td>
 									<td style="text-align: center; vertical-align: middle;">August 2020<br> - <br>December 2022</td>
 								</tr>
-								<td>
-									<b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
-									<i>Tiger (Panthera tigris) Endangerment: Positive Responses to Tiger Conservation Efforts</i>
-									<ul>
-										<li>Produced cartographic and data-driven products following journal guidelines that support land and wildlife management using ArcGIS and R.</li>
-									</ul>
-									<ol>
-										<li>Debugged R scripts for statistical analysis; promptly shared with colleagues.</li>
-										<li>Processed, analyzed, interpreted, and synthesized spatial data for publication.</li>
-									</ol>
-									<ul>
-										<li>Thoroughly reviewed pertinent literature to develop research question(s) and collect subspecies demographic data for statistical analysis.</li>
-									</ul>
-									<ol>
-										<li>Assessed the influence varying levels of human disturbance has on the viability of 3 geographically distinct populations.</li>
-									</ol>
-									<ul>
-										<li>Organized and managed project database in a collaborative workspace environment.</li>
-									</ul>
-								</td>
-								<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
-								</tr>
 								<tr>
 									<td>
+										<b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
 										<i>Greater Sage-Grouse are an Umbrella Species for Shrub-Steppe Bird Communities at a Range-Wide Scale</i><br>
 										<ul>
 											<li>Optimized >2,400 spatial data points for spatial and statistical analysis using Breeding Bird Survey data.</li>
@@ -422,12 +401,38 @@
 										</ol>
 										<ul>
 											<li>Organized and managed project database in a collaborative workspace environment.</li>
-											<li>Investigated the influence managed greater sage-grouse (GSG) areas have on metrics of avian diversity over time.</li>
+											<li>Investigated the influence managed greater sage-grouse areas have on metrics of
+												avian diversity over time.</li>
 										</ul>
 										<ol>
-											<li>Helped land managers and conservationists better plan to protect GSG as an umbrella
-												species and manage healthy rangeland habitat to protect avian biodiversity long-term.</li>
+											<li>Informed conservation decisions to manage rangelands and greater sage-grouse as an umbrella
+												species to protect avian biodiversity long-term.</li>
 										</ol>
+									</td>
+									<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
+								</tr>
+								<tr>
+									<td>
+										<i>Tiger (Panthera tigris) Endangerment: Positive Responses to Tiger Conservation Efforts</i>
+										<ul>
+											<li>Produced cartographic and data-driven products following journal guidelines that support land and wildlife management using ArcGIS and R.</li>
+										</ul>
+										<ol>
+											<li>Debugged R scripts for statistical analysis; promptly shared with colleagues.</li>
+											<li>Processed, analyzed, interpreted, and synthesized spatial data for publication.</li>
+										</ol>
+										<ul>
+											<li>Thoroughly reviewed pertinent literature to develop research question(s) and collect subspecies demographic data for statistical analysis.</li>
+											<li>Assessed the influence varying levels of human disturbance has on the viability of 3 geographically distinct populations.</li>
+
+										</ul>
+										<ol>
+											<li>Informed global conservation efforts recovering wild tiger populations through reintroduction,
+												habitat restoration, and reducing human-wildlife conflict.</li>
+										</ol>
+										<ul>
+											<li>Organized and managed project database in a collaborative workspace environment.</li>
+										</ul>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
 								</tr>
