--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 										<i>Greater Sage-Grouse are an Umbrella Species for Shrub-Steppe Bird Communities at a Range-Wide Scale</i><br>
 										<ul>
 											<li>Optimized >2,400 spatial data points for spatial and statistical analysis using Breeding Bird Survey data.</li>
-											<li>Produced cartographic and data-driven products following journal guidelines that support land and wildlife management using ArcGIS and R.</li>
+											<li>Produced cartographic and data-driven products following journal guidelines to support land and wildlife management using ArcGIS and R.</li>
 										</ul>
 										<ol>
 											<li>Developed R scripts for statistical analysis and uniform data visualization.</li>
@@ -415,7 +415,7 @@
 									<td>
 										<i>Tiger (Panthera tigris) Endangerment: Positive Responses to Tiger Conservation Efforts</i>
 										<ul>
-											<li>Produced cartographic and data-driven products following journal guidelines that support land and wildlife management using ArcGIS and R.</li>
+											<li>Produced cartographic and data-driven products following journal guidelines to support land and wildlife management using ArcGIS and R.</li>
 										</ul>
 										<ol>
 											<li>Debugged R scripts for statistical analysis; promptly shared with colleagues.</li>
@@ -441,21 +441,19 @@
 										<b>Undergraduate Research</b> (CMU) <br>
 										<i>The Steppingstones of Dispersal in Felidae</i><br>
 										<ul>
-											<li>Extended research from a writing intensive Conservation Biology course to implement advanced
-												landscape-scale spatial analysis using ArcGIS.</li>
+											<li>Produced cartographic and data-driven products following journal guidelines
+												to support land and wildlife management using ArcGIS.</li>
 										</ul>
 										<ol>
-											<li>Consistently executed spatial analysis across 9 landscapes using ModelBuilder.</li>
-											<li>Acquired, manipulated, and analyzed open-sourced spatial data to produce cartographic and data-driven products.</li>
-											<li>Organized and managed spatial and non-spatial data.</li>
+											<li>Automated spatial analysis and data management using ModelBuilder.</li>
+											<li>Developed spatially explicit models using geospatial data from multiple sources.</li>
+											<li>Extensively reviewed literature to develop expert literature-based models using spatially explicit environmental data.</li>
+											<li>Analyzed, interpreted, and synthesized geospatial data and results.</li>
 										</ol>
 										<ul>
-											<li>Conducted spatial and statistical analyis to assess the influence human land use and land change has on 9 endangered, vulnerable, and near-threatened cat populations.</li>
-											<li>Extensively reviewed literature to develop expert literature-based models using spatially explicit environmental data for 9 big cats.</li>
+											<li>Conducted spatial and statistical analysis to assess the influence human land use and land change has
+												on 9 big cat populations classified as endangered, vulnerable, and near-threatened.</li>
 										</ul>
-										<ol>
-											<li>Developed expert literature-based models to develop resistance rasters for connectivity models.</li>
-										</ol>
 									</td>
 									<td style="text-align: center; vertical-align: middle;">August 2019<br> - <br>August 2020</td>
 								</tr>
