--- a/index.html
+++ b/index.html
@@ -242,6 +242,11 @@
 										<font color="#afbcc0"> •</font> Denton, Texas<br>
 										<ul>
 											<li>Achieved proficiency in effectively communicating technical content to non-technical audiences.</li>
+										</ul>
+										<ol>
+										<li>Applied several teaching techniques to accommodate various learning styles of students.</li>
+										</ol>
+										<ul>										
 											<li>Promoted to lead TA in January 2022; assessed and implemented recommendations to improve course efficiency.</li>
 										</ul>
 										<ol>
